@@ -1,3 +1,14 @@
+2004-06-11  David Reveman  <c99drn@cs.umu.se>
+
+	* src/cairo_gstate.c (_cairo_gstate_create_pattern): Get solid color
+	from color stop components.
+
+	* src/cairoint.h: Removed cairo color from color stop.
+
+	* src/cairo_pattern.c: Added MULTIPLY_COLORCOMP macro.
+	(cairo_pattern_add_color_stop): Do not pre-multiply stop color.
+	(_cairo_pattern_calc_color_at_pixel): Multiply with alpha.
+
 2004-05-28  Keith Packard  <keithp@keithp.com>
 
 	* configure.in:
